# machine-learning-stats

./: .buildinfo  CONTRIBUTING.md  LICENSE  README.md  _config.yml  _toc.yml  genindex.html  index.html  index.md  objects.inv  pyproject.toml  requirements.txt  run.py  search.html  searchindex.js
.github/workflows/: deploy.yml
_build/.doctrees/: environment.pickle  index.doctree
_build/.doctrees/ml-book/: bibliography.doctree  (+4 more)
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_sources/ml-book/: intro.ipynb  markdown.ipynb
_templates/: page.html
assets/: lime_c0.html  lime_c1.html  lime_feats_1.html  lime_feats_2.html  lime_pm.html
ml-book/: bibliography.html  intro.html  intro.ipynb  introducao.html  markdown.html  notebooks.html
ml-book/01.guide/: 01.01.o_que_e_ml.html  01.03.relacao_ml_estatistica.html  01.04.markdown.html  01_03_relacao_ml_estatistica.html  exercicios.html  markdown.html  markdown.ipynb  notebooks.html  o_que_e_estatistica.html  o_que_e_ml.html  relacao_ml_estatistica.html  relacao_ml_estatistica.ipynb
ml-book/02.stats/: exercicios.html  exercicios.ipynb  inferencia_estatistica.html  medidas_centralidade_dispersao.html  probabilidade.html  regressao_linear.html  testes_hipoteses.html  testes_hipoteses.ipynb  variaveis_distribuicoes.html
ml-book/08.references/: bibliography.html
ml-book/_bibliography/: references.bib  references.html
ml-book/advanced/: 01.projeto-01-interpretabilidade_modelos.html
ml-book/guide/: 01_first.html  02_notebooks.html  99_example_notebooks.ipynb
(+138 files in other folders)
