[tool.poetry]
name = "ml-books"
version = "0.1.0"
description = "Books focused in self-learning"
authors = ["Manuel Ferreira Junior <ferreira.jr.ufpb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-book = "^1.0.0"
ipykernel = "^6.29.4"
ghp-import = "^2.1.0"
cookiecutter = "^2.6.0"
pandas = "^2.2.2"
polars = "^0.20.23"
altair = "^5.3.0"
plotly = "^5.22.0"
vega-datasets = "^0.9.0"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
nbformat = "^5.10.4"
seaborn = "^0.13.2"
tqdm = "^4.66.2"
scikit-learn = "^1.4.2"
lime = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
